--- a/MandelbrotDX/MandelbrotDX.vcxproj
+++ b/MandelbrotDX/MandelbrotDX.vcxproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="WorkerPool.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Mandelbrot.hlsl">
