--- a/MandelbrotDX/MandelbrotDX.vcxproj.filters
+++ b/MandelbrotDX/MandelbrotDX.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WorkerPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Mandelbrot.hlsl">
